[B3] Fix unused-but-set-variable warning https://bugs.webkit.org/show_bug.cgi?id=152122

Reviewed by Mark Lam.

* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::DFG::LowerDFGToLLVM::lower):


Canonical link: https://commits.webkit.org/170259@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193905 268f45cc-cd09-0410-ab3c-d52691b4dbfc